--- a/StepperControlV2/menu.ui
+++ b/StepperControlV2/menu.ui
@@ -35,7 +35,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Ángulo: </string>
+    <string>Steps: </string>
    </property>
   </widget>
   <widget class="QLabel" name="label2">
@@ -101,30 +101,82 @@
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="button">
+  <widget class="QPushButton" name="bclock">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>250</y>
+     <x>80</x>
+     <y>270</y>
      <width>111</width>
      <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>Mover Motor</string>
+    <string>Giro Horario</string>
    </property>
   </widget>
   <widget class="QLabel" name="texto">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>100</x>
      <y>320</y>
-     <width>271</width>
-     <height>16</height>
+     <width>191</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="bcclock">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>270</y>
+     <width>111</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Giro Antihorario</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>140</y>
+     <width>131</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>6400 es un giro completo</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>140</y>
+     <width>131</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Usar valores entre 0-9999</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>230</y>
+     <width>131</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Usar valores entre 0-150</string>
    </property>
   </widget>
  </widget>
